<resources>
    <string name="app_name">Read_Record</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID</string>
    <string name="title">書名</string>
    <string name="auther">著者</string>
    <string name="author">著者</string>
    <string name="isbn">ISBN</string>
    <string name="comment">コメント</string>
    <string name="number">No.</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
</resources>
