<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReadRecordEditActivity">

    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/titleEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:maxLines="8" android:minLines="1"/>
    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/titleEdit"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:id="@+id/authorEdit"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:minLines="1" android:maxLines="5"/>
    <TextView
            android:text="@string/isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/authorEdit"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:id="@+id/isbnEdit"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/isbnEdit"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:id="@+id/commentEdit"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:maxLines="8" android:minLines="2"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/save" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/delete"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>